# Panda_path_planning

./: README.md  Robothon Presentation.pptx
Task1/: Panda_1_2.ttt  frankaSim1_1.ttt
Task1/files/: task1_1_self_collision.data  task1_2_cartesian_trajectory.data  task1_2_joint_trajectory.data
Task1/src/: Franka.py  Task1_1.py  Task1_2.py
Task2/: CMakeLists.txt  package.xml
Task2/launch/: Task2.launch.py  reach_and_grasp.launch.py  reach_and_grasp_cluttered.launch.py
Task2/src/: Task2_1.cpp  Task2_2.cpp
Task3/: Pandas.ttt
Task3/files/: Initialisation_Conf.data  task3_1_paths.data  task3_1_times.data
Task3/src/: PandaClasses.py  Task3_1.py  Task3_2.py
